--- a/docs/src/content/docs/zh/showcase.mdx
+++ b/docs/src/content/docs/zh/showcase.mdx
@@ -95,21 +95,21 @@ import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 	<LinkCard
 		href="https://www.feelback.dev/blog/new-astro-starlight-integration/"
 		title="FeelBack"
-		description="Add a user feedback system to your docs pages."
+		description="在文档页面中添加用户反馈系统。"
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-blog"
 		title="starlight-blog"
-		description="Add a blog to your documentation site."
+		description="添加一个博客到你的文档网站。"
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-links-validator"
 		title="starlight-links-validator"
-		description="Check for broken links in your Starlight pages."
+		description="在你的 Starlight 页面中检查损坏的链接"
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-typedoc"
 		title="starlight-typedoc"
-		description="Generate Starlight pages from TypeScript using TypeDoc."
+		description=" 使用 TypeDoc 从 TypeScript 生成 Starlight 页面。"
 	/>
 </CardGrid>
