Add Product Hunt banner and initial styles to Starlight docs

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -2,6 +2,10 @@
 title: Starlight 🌟 Build documentation sites with Astro
 description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
 template: splash
+banner:
+  content: |
+    <strong>Welcome Product Hunters 👋</strong>
+    <a href="#">We are live right now!</a>
 hero:
   title: Make your docs shine with Starlight
   tagline: Everything you need to build a stellar documentation website. Fast, accessible, and easy-to-use.
