i18n(ko-KR): fix typo

--- a/docs/src/content/docs/ko/getting-started.mdx
+++ b/docs/src/content/docs/ko/getting-started.mdx
@@ -126,4 +126,4 @@ Starlight [프로젝트 설정](/ko/reference/configuration/) 및 [개별 페이
 
 이 문서에서 답변을 찾을 수 없는 경우, 완전한 Astro 문서를 읽기 위해 [전체 Astro 문서](https://docs.astro.build) 에 방문하세요. 당신의 질문에 대한 답변은 이 Starlight 테마 아래에서 Astro가 어떻게 작동하는지 이해함으로써 얻을 수 있을 것입니다.
 
-[Github issues](https://github.com/withastro/starlight/issues)에서 Starlight의 알려진 문제를 확인할 수 있으며, 활발하고 친근한 커뮤니티인 [Astro Discord](https://astro.build/chat/)에서 도음을 받을수도 있습니다! 현재 진행되고 있는 개발이나 다른 주제에 대해 논의하기 위해 `#support` 포럼에 "starlight" 태그를 사용하여 질문을 게시하거나 `#starlight` 채널을 방문하세요.
+[Github issues](https://github.com/withastro/starlight/issues)에서 Starlight의 알려진 문제를 확인할 수 있으며, 활발하고 친근한 커뮤니티인 [Astro Discord](https://astro.build/chat)에서 도음을 받을수도 있습니다! 현재 진행되고 있는 개발이나 다른 주제에 대해 논의하기 위해 `#support` 포럼에 "starlight" 태그를 사용하여 질문을 게시하거나 `#starlight` 채널을 방문하세요.
