--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 banner:
   content: |
     <strong>Welcome Product Hunters 👋</strong>
-    <a href="#">We are live right now!</a>
+    <a href="https://www.producthunt.com/posts/starlight-by-astro">We are live right now!</a>
 hero:
   title: Make your docs shine with Starlight
   tagline: Everything you need to build a stellar documentation website. Fast, accessible, and easy-to-use.
