--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -4,8 +4,13 @@ description: Starlight helps you build beautiful, high-performance documentation
 template: splash
 banner:
   content: |
-    <strong>Welcome Product Hunters 👋</strong>
-    <a href="https://www.producthunt.com/posts/starlight-by-astro">We are live right now!</a>
+    <span class="ph-banner">
+      <span class="ph-houston"><img src="/ph-houston.svg" alt="" width="72" height="72"/></span>
+      <span class="ph-text">
+        <strong>Welcome Product Hunters&nbsp;👋</strong>
+        <a href="https://www.producthunt.com/posts/starlight-by-astro">We are live right now!</a>
+      </span>
+    </span>
 hero:
   title: Make your docs shine with Starlight
   tagline: Everything you need to build a stellar documentation website. Fast, accessible, and easy-to-use.
