i18n(fr): update `showcase.mdx`

--- a/docs/src/content/docs/fr/showcase.mdx
+++ b/docs/src/content/docs/fr/showcase.mdx
@@ -113,4 +113,9 @@ Ces outils, modules d'extension et intégrations communautaires fonctionnent ave
 		title="starlight-typedoc"
 		description="Générer des pages Starlight à partir de TypeScript en utilisant TypeDoc."
 	/>
+	<LinkCard
+		href="https://github.com/HiDeoo/starlight-openapi"
+		title="starlight-openapi"
+		description="Créer des pages de documentation à partir de spécifications OpenAPI/Swagger."
+	/>
 </CardGrid>
