--- a/docs/src/content/docs/es/showcase.mdx
+++ b/docs/src/content/docs/es/showcase.mdx
@@ -113,4 +113,9 @@ Estas herramientas de la comunidad, plugins e integraciones funcionan junto a St
 		title="starlight-typedoc"
 		description="Genera páginas de Starlight a partir de TypeScript usando TypeDoc."
 	/>
+	<LinkCard
+		href="https://github.com/HiDeoo/starlight-openapi"
+		title="starlight-openapi"
+		description="Crea páginas de documentación a partir de especificaciones OpenAPI/Swagger."
+	/>
 </CardGrid>
