i18n(ja): Update showcase

--- a/docs/src/content/docs/ja/showcase.mdx
+++ b/docs/src/content/docs/ja/showcase.mdx
@@ -112,4 +112,9 @@ import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 		title="starlight-typedoc"
 		description="TypeDocを使用してTypeScriptからStarlightページを生成します。"
 	/>
+	<LinkCard
+		href="https://github.com/HiDeoo/starlight-openapi"
+		title="starlight-openapi"
+		description="OpenAPI/Swagger specificationからドキュメントページを作成します。"
+	/>
 </CardGrid>
