--- a/docs/src/content/docs/ko/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/ko/guides/css-and-tailwind.mdx
@@ -29,7 +29,7 @@ Starlight의 기본 스타일을 수정하거나 확장하기 위한 추가 CSS 
    export default defineConfig({
    	integrations: [
    		starlight({
-   			title: 'Docs With Custom CSS',
+   			title: '사용자 정의 CSS를 사용한 문서',
    			customCss: [
    				// 사용자 정의 CSS 파일의 상대 경로
    				'./src/styles/custom.css',
