--- a/docs/src/content/docs/ko/guides/i18n.mdx
+++ b/docs/src/content/docs/ko/guides/i18n.mdx
@@ -122,8 +122,8 @@ export default defineConfig({
 			title: '나의 문서',
 			locales: {
 				root: {
-					label: '简体中文',
-					lang: 'zh-CN',
+					label: '한국어',
+					lang: 'ko',
 				},
 			},
 		}),
