--- a/docs/src/content/docs/zh/showcase.mdx
+++ b/docs/src/content/docs/zh/showcase.mdx
@@ -112,4 +112,9 @@ import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 		title="starlight-typedoc"
 		description=" 使用 TypeDoc 从 TypeScript 生成 Starlight 页面。"
 	/>
+	<LinkCard
+		href="https://github.com/HiDeoo/starlight-openapi"
+		title="starlight-openapi"
+		description="从 OpenAPI/Swagger 规范创建文档页面。"
+	/>
 </CardGrid>
