--- a/docs/src/content/docs/zh/guides/customization.mdx
+++ b/docs/src/content/docs/zh/guides/customization.mdx
@@ -177,7 +177,7 @@ defineConfig({
 
 Starlight 内置了对通过 Starlight 集成中的 [`social`](/zh/reference/configuration/#social) 选项将链接添加到网站标题的社交媒体帐户的支持。
 
-目前，支持链接到 Bitbucket、Codeberg、CodePen、Discord、GitHub、GitLab、Gitter、Instagram、LinkedIn、Mastodon、Microsoft Teams、Threads、Twitch、Twitter 和 YouTube。如果你需要支持其他服务，请在 GitHub 或 Discord 上告诉我们！
+目前，支持链接到 Bitbucket、Codeberg、CodePen、Discord、GitHub、GitLab、Gitter、Instagram、LinkedIn、Mastodon、Microsoft Teams、Stack Overflow、Threads、Twitch、Twitter 和 YouTube。如果你需要支持其他服务，请在 GitHub 或 Discord 上告诉我们！
 
 ```js
 // astro.config.mjs
