--- a/docs/src/content/docs/zh/index.mdx
+++ b/docs/src/content/docs/zh/index.mdx
@@ -2,6 +2,15 @@
 title: Starlight 🌟 使用 Astro 构建文档站点
 description: Starlight 帮助你使用 Astro 构建漂亮、高性能的文档网站。
 template: splash
+banner:
+  content: |
+    <span class="ph-banner">
+      <span class="ph-houston"><img src="/ph-houston.svg" alt="" width="72" height="72"/></span>
+      <span class="ph-text">
+        <strong>欢迎来到 Product Hunters&nbsp;👋</strong>
+        <a href="https://www.producthunt.com/posts/starlight-by-astro">我们正在直播中！</a>
+      </span>
+    </span>
 hero:
   title: Starlight <br/> 使你的文档闪耀夺目
   tagline: 快速、易用、易于访问 —— 构建卓越文档网站所需的一切。
