--- a/docs/src/content/docs/zh/index.mdx
+++ b/docs/src/content/docs/zh/index.mdx
@@ -7,7 +7,7 @@ banner:
     <span class="ph-banner">
       <span class="ph-houston"><img src="/ph-houston.svg" alt="" width="72" height="72"/></span>
       <span class="ph-text">
-        <strong>欢迎来到 Product Hunters&nbsp;👋</strong>
+        <strong>欢迎 Product Hunters&nbsp;👋</strong>
         <a href="https://www.producthunt.com/posts/starlight-by-astro">我们现在已上线！</a>
       </span>
     </span>
