--- a/docs/src/content/docs/fr/index.mdx
+++ b/docs/src/content/docs/fr/index.mdx
@@ -7,8 +7,8 @@ banner:
     <span class="ph-banner">
       <span class="ph-houston"><img src="/ph-houston.svg" alt="" width="72" height="72"/></span>
       <span class="ph-text">
-        <strong>Welcome Product Hunters&nbsp;👋</strong>
-        <a href="https://www.producthunt.com/posts/starlight-by-astro">We are live right now!</a>
+        <strong>Bienvenue Product Hunters&nbsp;👋</strong>
+        <a href="https://www.producthunt.com/posts/starlight-by-astro">Nous sommes en direct !</a>
       </span>
     </span>
 hero:
