i18n(pt-BR): Update all the pages

--- a/docs/src/content/docs/pt-br/getting-started.mdx
+++ b/docs/src/content/docs/pt-br/getting-started.mdx
@@ -126,4 +126,4 @@ Veja a lista crescente de guias na navegação lateral para conseguir ajuda em a
 
 Se a sua resposta não pôde ser encontrada nessa documentação, por favor visite a [documentação do Astro](https://docs.astro.build) para uma documentação mais completa sobre o Astro. Sua pergunta pode ser respondida ao entender como o Astro funciona no geral, por debaixo do tema Starlight.
 
-Você também pode conseguir ajuda no [Discord do Astro](https://astro.build/chat/) da nossa ativa e amigável comunidade! Você pode postar perguntas em nosso fórum `#support` ou visitar nosso canal dedicado `#starlight` para discutir o desenvolvimento atual e mais!
+Você também pode checar por quaisquer [problemas conhecidos do Starlight no GitHub](https://github.com/withastro/starlight/issues), e conseguir ajuda no [Discord do Astro](https://astro.build/chat/) da nossa ativa e amigável comunidade! Envie perguntas em nosso fórum `#support` com a tag "starlight", ou visite nosso canal dedicado `#starlight` para discutir o desenvolvimento atual e mais!
