--- a/docs/src/content/docs/pt-br/guides/customization.mdx
+++ b/docs/src/content/docs/pt-br/guides/customization.mdx
@@ -179,7 +179,7 @@ defineConfig({
 
 Starlight tem suporte integrado para adicionar links de suas contas de redes sociais ao cabeçalho do site através da opção [`social`](/pt-br/reference/configuration/#social) na integração Starlight.
 
-Atualmente, links para Bitbucket, Codeberg, CodePen, Discord, GitHub, GitLab, Gitter, LinkedIn, Mastodon, Microsoft Teams, Threads, Twitch, Twitter e Youtube são suportados.
+Atualmente, links para Bitbucket, Codeberg, CodePen, Discord, GitHub, GitLab, Gitter, LinkedIn, Mastodon, Microsoft Teams, Stack Overflow, Threads, Twitch, Twitter e Youtube são suportados.
 Nos avise no GitHub ou Discord se você precisa de suporte para outro serviço!
 
 ```js
