--- a/docs/src/content/docs/ko/index.mdx
+++ b/docs/src/content/docs/ko/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: Starlight 🌟 Astro를 이용해 문서 웹사이트를 만드세요
-description: Starlight는 Astro를 이용해 아름답고 성능이 좋은 문서 웹사이트를 구축할 수 있도록 도와줍니다.
+title: Starlight 🌟를 이용해 Astro로 문서 웹 사이트를 만드세요!
+description: Starlight는 Astro를 이용해 고성능의 아름다운  문서 웹 사이트를 구축할 수 있도록 도와줍니다.
 template: splash
 hero:
-  title: Starlight로 문서를 더 빛나게 만드세요
-  tagline: 아름다운 문서 웹사이트를 만드는데 필요한 모든 것. 빠르고, 접근성이 좋으며 사용하기 쉽습니다.
+  title: Starlight로 더 빛나는 문서를 만들어보세요
+  tagline: 아름다운 문서 웹 사이트를 만드는데 필요한 모든 것. 빠르고, 접근성이 좋으며 사용하기 쉽습니다.
   image:
     file: ../../../assets/hero-star.webp
   actions:
@@ -41,7 +41,7 @@ import AboutAstro from '../../../components/about-astro.astro';
 
 <AboutAstro title="제공">
 
-Astro는 빠른 속도를 위해 설계된 올인원 웹 프레임워크입니다. 선호하는 UI 컴포넌트와 라이브러리를 이용해 어디서든 컨텐츠를 가져오고 배포하세요.
+Astro는 빠른 속도를 위해 설계된 올인원 웹 프레임워크입니다. 선호하는 UI 컴포넌트와 라이브러리를 이용해 어디서든 컨텐츠를 가져와 배포하세요.
 
 [Astro에 대해 알아보기](https://astro.build/)
 
