--- a/docs/src/content/docs/ko/index.mdx
+++ b/docs/src/content/docs/ko/index.mdx
@@ -2,6 +2,15 @@
 title: Starlight 🌟를 이용해 Astro로 문서 웹 사이트를 만드세요!
 description: Starlight는 Astro를 이용해 고성능의 아름다운  문서 웹 사이트를 구축할 수 있도록 도와줍니다.
 template: splash
+banner:
+  content: |
+    <span class="ph-banner">
+      <span class="ph-houston"><img src="/ph-houston.svg" alt="" width="72" height="72"/></span>
+      <span class="ph-text">
+        <strong>Product Hunters 분들을 모두 환영합니다! &nbsp;👋 </strong>
+        <a href="https://www.producthunt.com/posts/starlight-by-astro">현재 라이브중입니다!</a>
+      </span>
+    </span>
 hero:
   title: Starlight로 더 빛나는 문서를 만들어보세요
   tagline: 아름다운 문서 웹 사이트를 만드는데 필요한 모든 것. 빠르고, 접근성이 좋으며 사용하기 쉽습니다.
