Fix link to athenaos.org

--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -18,7 +18,7 @@ Starlight is already being used in production. These are some of the sites aroun
 <FluidGrid>
 	<Card
 		title="Athena OS"
-		href="https://www.athenaos.org"
+		href="https://athenaos.org"
 		thumbnail="www.athenaos.org.png"
 	/>
 	<Card
