docs: add obytes starter to showcase

--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -82,6 +82,11 @@ Starlight is already being used in production. These are some of the sites aroun
 		href="https://commandkit.underctrl.io"
 		thumbnail="commandkit.underctrl.io.png"
 	/>
+	<Card
+		title="Obytes Starter"
+		href="https://starter.obytes.com"
+		thumbnail="starter.obytes.com.jpg"
+	/>
 </FluidGrid>
 
 See all the [public project repos using Starlight on GitHub](https://github.com/withastro/starlight/network/dependents).
