--- a/docs/src/content/docs/es/showcase.mdx
+++ b/docs/src/content/docs/es/showcase.mdx
@@ -18,7 +18,7 @@ Starlight ya está siendo utilizado en producción. Estos son algunos de los sit
 <FluidGrid>
 	<Card
 		title="Athena OS"
-		href="https://www.athenaos.org"
+		href="https://athenaos.org"
 		thumbnail="www.athenaos.org.png"
 	/>
 	<Card
@@ -81,6 +81,11 @@ Starlight ya está siendo utilizado en producción. Estos son algunos de los sit
 		title="CommandKit"
 		href="https://commandkit.underctrl.io"
 		thumbnail="commandkit.underctrl.io.png"
+	/>
+	<Card
+		title="Obytes Starter"
+		href="https://starter.obytes.com"
+		thumbnail="starter.obytes.com.jpg"
 	/>
 </FluidGrid>
 
