i18n(zh): Update showcase.mdx

--- a/docs/src/content/docs/zh/showcase.mdx
+++ b/docs/src/content/docs/zh/showcase.mdx
@@ -17,7 +17,7 @@ Starlight 已投入生产。 这些是网络上的一些网站：
 <FluidGrid>
 	<Card
 		title="Athena OS"
-		href="https://www.athenaos.org"
+		href="https://athenaos.org"
 		thumbnail="www.athenaos.org.png"
 	/>
 	<Card
@@ -80,6 +80,11 @@ Starlight 已投入生产。 这些是网络上的一些网站：
 		title="CommandKit"
 		href="https://commandkit.underctrl.io"
 		thumbnail="commandkit.underctrl.io.png"
+	/>
+	<Card
+		title="Obytes Starter"
+		href="https://starter.obytes.com"
+		thumbnail="starter.obytes.com.jpg"
 	/>
 </FluidGrid>
 
