--- a/docs/src/content/docs/ko/guides/customization.mdx
+++ b/docs/src/content/docs/ko/guides/customization.mdx
@@ -173,7 +173,7 @@ defineConfig({
 
 Starlight에는 Starlight 통합의 [`social`](/ko/reference/configuration/#social) 옵션을 통해 사이트 헤더에 소셜 미디어 계정을 링크하는 기능이 내장되어 있습니다.
 
-현재 Bitbucket, Codeberg, CodePen, Discord, GitHub, GitLab, Gitter, Instagram, LinkedIn, Mastodon, Microsoft Teams, Threads, Twitch, Twitter 및 Youtube에 대한 링크가 지원됩니다. 다른 서비스에 대한 지원이 필요하면 GitHub나 Discord를 통해 알려주세요!
+현재 Bitbucket, Codeberg, CodePen, Discord, GitHub, GitLab, Gitter, Instagram, LinkedIn, Mastodon, Microsoft Teams, Stack Overflow, Threads, Twitch, Twitter 및 Youtube에 대한 링크가 지원됩니다. 다른 서비스에 대한 지원이 필요하면 GitHub나 Discord를 통해 알려주세요!
 
 ```js
 // astro.config.mjs
