--- a/docs/src/content/docs/ko/getting-started.mdx
+++ b/docs/src/content/docs/ko/getting-started.mdx
@@ -45,13 +45,13 @@ yarn create astro --template starlight
 [StackBlitz에서 템플릿 열기](https://stackblitz.com/github/withastro/starlight/tree/main/examples/basics).
 :::
 
-## Starlight로 컨텐츠 생성하기
+## Starlight로 콘텐츠 생성하기
 
-Starlight는 새로운 컨텐츠를 추가하거나 기존 파일을 가져올 준비가 되어 있습니다!
+Starlight는 새로운 콘텐츠를 추가하거나 기존 파일을 가져올 준비가 되어 있습니다!
 
 ### 파일 형식
 
-Starlight에서는 Markdown 및 MDX를 이용해 컨텐츠를 생성할 수 있습니다. (실험적 [Astro Markdoc 통합](https://docs.astro.build/en/guides/integrations-guide/markdoc/) 을 설치하여 Markdoc을 사용할 수도 있습니다.)
+Starlight에서는 Markdown 및 MDX를 이용해 콘텐츠를 생성할 수 있습니다. (실험적 기능인 [Astro Markdoc 통합](https://docs.astro.build/ko/guides/integrations-guide/markdoc/)을 설치하여 Markdoc을 사용할 수도 있습니다.)
 
 ### 페이지 추가
 
@@ -64,12 +64,12 @@ src/content/docs/guides/faq.md => your-site.com/guides/faq
 
 ### 타입 안정성을 갖춘 frontmatter
 
-모든 Starlight 페이지는 페이지 표시 방법을 제어하기 위한 사용자 지정 가능한 [공통 frontmatter 속성 세트](/ko/reference/frontmatter/) 를 공유합니다.
+모든 Starlight 페이지는 페이지 표시 방법을 제어하기 위해 사용자가 원하는대로 변경 가능한 [공통 frontmatter 속성 세트](/ko/reference/frontmatter/)를 공유합니다.
 
 ```md
 ---
-title: Hello, World!
-description: This is a page in my Starlight-powered site
+title: 안녕하세요!
+description: Starlight 기반 웹 사이트의 페이지입니다.
 ---
 ```
 
@@ -77,9 +77,9 @@ description: This is a page in my Starlight-powered site
 
 ## Starlight 웹사이트 배포하기
 
-Starlight 웹 사이트를 만들고 사용자 정의한 후에는 웹 서버 또는 Netlify, Vercel, GitHub Pages 등 원하는 호스팅 플랫폼에 배포할 수 있습니다.
+Starlight로 웹 사이트를 만들고 모든 설정을 완료한 후에는 웹 서버 또는 Netlify, Vercel, GitHub Pages 등 원하는 호스팅 플랫폼에 배포할 수 있습니다.
 
-[Astro 문서에서 Astro 웹 사이트를 배포하는 방법에 대해 알아보세요.](https://docs.astro.build/en/guides/deploy/)
+[Astro 공식 문서에서 Astro 기반의 웹 사이트를 배포하는 방법에 대해 알아보세요.](https://docs.astro.build/ko/guides/deploy/)
 
 ## Starlight 업데이트
 
@@ -116,14 +116,14 @@ yarn upgrade @astrojs/starlight --latest
 </TabItem>
 </Tabs>
 
-[Starlight 변경 로그](https://github.com/withastro/starlight/blob/main/packages/starlight/CHANGELOG.md) 에서 각 릴리스의 전체 변경 목록을 확인할 수 있습니다.
+각 릴리스의 전체 변경 목록을 확인하기 위해 [Starlight 변경 로그](https://github.com/withastro/starlight/blob/main/packages/starlight/CHANGELOG.md)에 방문하세요.
 
 ## Starlight 문제 해결
 
-Starlight [프로젝트 설정](/ko/reference/configuration/) 및 [개별 페이지 frontmatter 설정](/ko/reference/frontmatter/) 정보는 모두 이 웹 사이트의 참조 섹션에서 확인할 수 있습니다. 이 페이지를 통해 Starlight 웹 사이트가 제대로 설정되고 작동하는지 확인하세요.
+Starlight의 [프로젝트 구성](/ko/reference/configuration/) 및 [개별 페이지의 frontmatter](/ko/reference/frontmatter/)에 대한 정보는 모두 이 웹 사이트의 참조 섹션에서 확인할 수 있습니다. 이 페이지를 통해 Starlight 웹 사이트가 제대로 구성되어 작동하는지 확인하세요.
 
-컨텐츠 추가 및 Starlight 웹 사이트 사용자 지정에 대한 도움말은 사이드바에서 가이드 섹션을 참조하세요.
+콘텐츠 추가 및 Starlight 사이트 설정에 대한 도움말은 사이드바의 가이드 섹션에서 확인할 수 있습니다.
 
-이 문서에서 답변을 찾을 수 없는 경우, 완전한 Astro 문서를 읽기 위해 [전체 Astro 문서](https://docs.astro.build) 에 방문하세요. 당신의 질문에 대한 답변은 이 Starlight 테마 아래에서 Astro가 어떻게 작동하는지 이해함으로써 얻을 수 있을 것입니다.
+이 문서에서 답변을 얻을 수 없는 경우, [Astro 공식 문서](https://docs.astro.build/ko/)에 방문하여 완전한 Astro 공식 문서를 확인하세요. 당신의 질문에 대한 답변은 이 Starlight 테마 아래에서 Astro가 어떻게 작동하는지 이해함으로써 얻을 수 있을 것입니다.
 
-[Github issues](https://github.com/withastro/starlight/issues)에서 Starlight의 알려진 문제를 확인할 수 있으며, 활발하고 친근한 커뮤니티인 [Astro Discord](https://astro.build/chat)에서 도음을 받을수도 있습니다! 현재 진행되고 있는 개발이나 다른 주제에 대해 논의하기 위해 `#support` 포럼에 "starlight" 태그를 사용하여 질문을 게시하거나 `#starlight` 채널을 방문하세요.
+[Github issues](https://github.com/withastro/starlight/issues)에서 Starlight의 알려진 문제를 확인할 수 있으며, 활발하고 친근한 커뮤니티인 [Astro Discord](https://astro.build/chat)에서 도음을 받을수도 있습니다! 현재 진행되고 있는 개발이나 다른 주제에 대해 논의하기 위해 `#support` 포럼에서 "starlight" 태그를 사용하여 질문을 게시하거나 `#starlight` 채널을 방문하세요.
