--- a/docs/src/content/docs/ko/guides/components.mdx
+++ b/docs/src/content/docs/ko/guides/components.mdx
@@ -30,7 +30,7 @@ import AnotherComponent from '../../../components/AnotherComponent.astro';
 </AnotherComponent>
 ```
 
-Starlight는 Astro로 구동되므로 MDX 파일에 [지원되는 UI 프레임워크(React, Preact, Svelte, Vue, Solid, Lit 및 Alpine)](https://docs.astro.build/ko/core-concepts/framework-components/)로 빌드된 컴포넌트를 추가할 수 있습니다.
+Starlight는 Astro로 구동되므로 [지원되는 UI 프레임워크(React, Preact, Svelte, Vue, Solid, Lit 및 Alpine)](https://docs.astro.build/ko/core-concepts/framework-components/)로 빌드된 컴포넌트를 MDX 파일에 추가할 수 있습니다.
 Astro 문서에서 [MDX에서 컴포넌트 사용](https://docs.astro.build/ko/guides/markdown-content/#using-comComponents-in-mdx)에 대해 자세히 알아보세요.
 
 ### Starlight 스타일과의 호환성
@@ -69,7 +69,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 </Tabs>
 ```
 
-위의 코드는 페이지에 아래와 같은 탭을 생성합니다.
+위 코드는 페이지에 아래와 같은 탭을 생성합니다.
 
 <Tabs>
 	<TabItem label="별">시리우스, 베가, 베텔게우스</TabItem>
@@ -83,7 +83,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 `<Card>` 컴포넌트를 사용하면 Starlight 스타일의 상자에 콘텐츠를 표시할 수 있습니다.
 공간이 충분할 때 카드를 나란히 표시하려면 `<CardGrid>` 컴포넌트로 여러 카드를 감싸세요.
 
-`<Card>` 에는 `title` 속성이 반드시 필요하며 선택적으로 [Starlight 내장 아이콘 중 하나](#모든-아이콘)의 이름으로 설정된 `icon` 속성을 포함할 수 있습니다.
+`<Card>` 컴포넌트에는 `title` 속성이 반드시 필요하며 선택적으로 [Starlight 내장 아이콘 중 하나](#모든-아이콘)의 이름으로 설정된 `icon` 속성을 포함할 수 있습니다.
 
 ```mdx
 import { Card, CardGrid } from '@astrojs/starlight/components';
@@ -100,7 +100,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 </CardGrid>
 ```
 
-위의 코드는 페이지에 아래와 같은 화면을 생성합니다.
+위 코드는 페이지에 아래와 같은 요소들을 생성합니다.
 
 <Card title="확인">강조하고 싶은 흥미로운 콘텐츠.</Card>
 
@@ -130,7 +130,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 다른 페이지로 이동하는 눈에 띄는 링크를 만들기 위해 `<LinkCard>` 컴포넌트를 사용하세요.
 
-`<LinkCard>` 에는 `title`과 [`href`](https://developer.mozilla.org/ko/docs/Web/HTML/Element/a#attr-href) 속성이 필요합니다. 짧은 `description`이나 `target`과 같은 기타 링크 속성을 선택적으로 포함할 수 있습니다.
+`<LinkCard>` 컴포넌트에는 `title`과 [`href`](https://developer.mozilla.org/ko/docs/Web/HTML/Element/a#attr-href) 속성이 필요합니다. 짧은 `description`이나 `target`과 같은 기타 링크 속성을 선택적으로 포함할 수 있습니다.
 
 공간이 충분할 때, 카드를 나란히 표시하기 위해 여러 `<LinkCard>` 컴포넌트를 `<CardGrid>`에 그룹화하세요.
 
@@ -152,7 +152,7 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 </CardGrid>
 ```
 
-위의 코드는 페이지에 아래와 같은 화면을 생성합니다.
+위 코드는 페이지에 아래와 같은 요소들을 생성합니다.
 
 import { LinkCard } from '@astrojs/starlight/components';
 
@@ -177,7 +177,7 @@ import IconsList from '../../../../components/icons-list.astro';
 
 Starlight는 `<Icon>` 컴포넌트를 사용하여 콘텐츠에 표시할 수 있는 공통 아이콘 세트를 제공합니다.
 
-각 `<Icon>`에는 [`name`](#모든-아이콘)이 필요하며 선택적으로 `label`, `size` 및 `color` 속성을 포함할 수 있습니다.
+각 `<Icon>` 컴포넌트에는 [`name`](#모든-아이콘) 속성이 필요하며 선택적으로 `label`, `size` 및 `color` 속성을 포함할 수 있습니다.
 
 ```mdx
 import { Icon } from '@astrojs/starlight/components';
@@ -185,12 +185,12 @@ import { Icon } from '@astrojs/starlight/components';
 <Icon name="star" color="goldenrod" size="2rem" />
 ```
 
-위의 코드는 페이지에 아래와 같은 화면을 생성합니다.
+위 코드는 페이지에 아래와 같은 아이콘을 생성합니다.
 
 <Icon name="star" color="goldenrod" size="2rem" />
 
 #### 모든 아이콘
 
-사용 가능한 모든 아이콘 목록이 관련 이름과 함께 아래에 표시됩니다. 아이콘을 클릭하면 해당 컴포넌트 코드를 복사할 수 있습니다.
+사용 가능한 모든 아이콘 목록이 관련 이름과 함께 아래에 표시됩니다. 아이콘을 클릭하면 해당 아이콘 컴포넌트의 코드를 복사할 수 있습니다.
 
 <IconsList />
