i18n:(he) fix 404 .mx

--- a/docs/src/content/docs/he/404.md
+++ b/docs/src/content/docs/he/404.md
@@ -1,13 +1,13 @@
 ---
-title: Not found
+title: העמוד לא נמצא
 template: splash
 editUrl: false
 hero:
   title: '404'
-  tagline: <strong>העמוד לא נמצא</strong>.</strong> שגיאה.<br>אנא בדקו את כתובת האתר
+  tagline: <strong>יוסטון, יש לנו בעיה.</strong> לא הצלחנו למצוא את הדף הזה.<br>בדקו את כתובת האתר או נסה את שורת החיפוש.
   actions:
-    - text: חזרו חזרה
+    - text: חזרו לעמוד הבית
       icon: right-arrow
-      link: /
+      link: /he/
       variant: primary
 ---
