--- a/packages/starlight/translations/he.json
+++ b/packages/starlight/translations/he.json
@@ -3,7 +3,7 @@
     "search.label": "חיפוש",
     "search.shortcutLabel": "(לחצו / לחיפוש)",
     "search.cancelLabel": "ביטול",
-    "search.devWarning": "לא ניתן להציג תצוגה מקדימה של האתר באופן מקומי.",
+    "search.devWarning": "החיפוש זמין רק במצב ייצור. \nנסו לבנות ולהציג תצוגה מקדימה של האתר כדי לבדוק אותו באופן מקומי.",
     "themeSelect.accessibleLabel": "בחרו פרופיל צבע",
     "themeSelect.dark": "כהה",
     "themeSelect.light": "בהיר",
@@ -13,7 +13,7 @@
     "sidebarNav.accessibleLabel": "ראשי",
     "tableOfContents.onThisPage": "בדף זה",
     "tableOfContents.overview": "סקירה כללית",
-    "i18n.untranslatedContent": "תוכן זה אינו זמין עדיין בשפת העברית.",
+    "i18n.untranslatedContent": "תוכן זה אינו זמין עדיין בשפה שלך.",
     "page.editLink": "ערכו דף",
     "page.lastUpdated": "עדכון אחרון:",
     "page.previousLink": "הקודם",
