docs: use synced tabs in existing docs

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -11,7 +11,7 @@ Starlight is a full-featured documentation theme built on top of the [Astro](htt
 
 You can create a new Astro + Starlight project using the following command:
 
-<Tabs>
+<Tabs syncKey="pkg">
 <TabItem label="npm">
 
 ```sh
@@ -89,7 +89,7 @@ Because Starlight is beta software, there will be frequent updates and improveme
 
 Starlight is an Astro integration, and is updated like any `@astrojs/*` integration:
 
-<Tabs>
+<Tabs syncKey="pkg">
 <TabItem label="npm">
 
 ```sh
