--- a/docs/src/content/docs/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/guides/css-and-tailwind.mdx
@@ -59,7 +59,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 Start a new Starlight project with Tailwind CSS pre-configured using `create astro`:
 
-<Tabs>
+<Tabs syncKey="pkg">
 <TabItem label="npm">
 
 ```sh
@@ -89,7 +89,7 @@ If you already have a Starlight site and want to add Tailwind CSS, follow these 
 
 1.  Add Astro’s Tailwind integration:
 
-    <Tabs>
+    <Tabs syncKey="pkg">
 
     <TabItem label="npm">
 
@@ -119,7 +119,7 @@ If you already have a Starlight site and want to add Tailwind CSS, follow these 
 
 2.  Install the Starlight Tailwind plugin:
 
-    <Tabs>
+    <Tabs syncKey="pkg">
 
     <TabItem label="npm">
 
