fix: broken urls

--- a/docs/src/content/docs/it/showcase.mdx
+++ b/docs/src/content/docs/it/showcase.mdx
@@ -10,8 +10,8 @@ Apri una PR aggiungendo un link a questa pagina!
 
 ## Sites
 
-import Card from '../../components/showcase-card.astro';
-import FluidGrid from '../../components/fluid-grid.astro';
+import Card from '../../../components/showcase-card.astro';
+import FluidGrid from '../../../components/fluid-grid.astro';
 
 Starlight è già utilizzato nella produzione. Questi sono alcuni dei siti presenti sul web:
 
