fix: attempt fix
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/content/docs/it/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/it/guides/css-and-tailwind.mdx
@@ -251,29 +251,29 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 <ThemeDesigner
 	labels={{
 		presets: {
-			label: 'Preimpostazioni'
-			ocean: 'Oceano'
-			forest: 'Foresta'
-			oxide: 'Ossido'
-			nebula: 'Nebulosa'
-			default: 'Predefinito'
-			random: 'Casuale'
+			label: 'Preimpostazioni',
+			ocean: 'Oceano',
+			forest: 'Foresta',
+			oxide: 'Ossido',
+			nebula: 'Nebulosa',
+			default: 'Predefinito',
+			random: 'Casuale',
 		},
 		editor: {
-			accentColor: 'Accento'
-			grayColor: 'Grigio'
-			hue: 'Tonalità'
-			chroma: 'Croma'
-			pickColor: 'Scegli colore'
+			accentColor: 'Accento',
+			grayColor: 'Grigio',
+			hue: 'Tonalità',
+			chroma: 'Croma',
+			pickColor: 'Scegli colore',
 		},
 		preview: {
-			darkMode: 'Modalità oscura'
-			lightMode: 'Modalità luce'
+			darkMode: 'Modalità oscura',
+			lightMode: 'Modalità luce',
 			bodyText:
-				'Il corpo del testo viene visualizzato in tonalità grigia con un contrasto elevato con lo sfondo.'
-			linkText: 'I collegamenti sono colorati.'
-			dimText: 'Alcuni testi, come il sommario, hanno un contrasto inferiore.'
-			inlineCode: 'Il codice in linea ha uno sfondo distinto.'
+				'Il corpo del testo viene visualizzato in tonalità grigia con un contrasto elevato con lo sfondo.',
+			linkText: 'I collegamenti sono colorati.',
+			dimText: 'Alcuni testi, come il sommario, hanno un contrasto inferiore.',
+			inlineCode: 'Il codice in linea ha uno sfondo distinto.',
 		},
 	}}
 >
