--- a/docs/src/content/docs/it/guides/customization.mdx
+++ b/docs/src/content/docs/it/guides/customization.mdx
@@ -144,7 +144,7 @@ defineConfig({
 
 Disabilita completamente il sommario impostando l'opzione `tableOfContents` su `false`:
 
-<Schede>
+<Tabs>
    <TabItem label="Frontmatter">
 
 ```md
