docs: add kanri website to showcase

--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -87,6 +87,11 @@ Starlight is already being used in production. These are some of the sites aroun
 		href="https://starter.obytes.com"
 		thumbnail="starter.obytes.com.jpg"
 	/>
+	<Card
+		title="Kanri"
+		href="https://kanriapp.com"
+		thumbnail="kanriapp.com.png"
+	/>
 </FluidGrid>
 
 See all the [public project repos using Starlight on GitHub](https://github.com/withastro/starlight/network/dependents).
