--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -87,6 +87,21 @@ You can display different versions of your logo in light and dark modes.
    }),
    ```
 
+## Enable sitemap
+
+Starlight has built-in support for generating a sitemap. Enable sitemap generation by setting your URL as `site` in `astro.config.mjs`:
+
+```js
+// astro.config.mjs
+
+export default defineConfig({
+  site: 'https://stargazers.club',
+  integrations: [
+    starlight({ title: 'Site with sitemap' }),
+  ],
+});
+```
+
 ## Page layout
 
 By default, Starlight pages use a layout with a global navigation sidebar and a table of contents that shows the current page headings.
@@ -413,15 +428,3 @@ main {
 ```
 
 Follow the [custom CSS instructions](/guides/css-and-tailwind/#custom-css-styles) to add your styles to your site.
-
-## Sitemap
-
-Starlight has built-in support for Astro Sitemaps. You can use the sitemap by adding `site` to `astro.config.mjs`:
-
-   ```js
-   // astro.config.mjs
-
-   export default defineConfig({
-	  site: 'https://stargazers.club',
-   });
-   ```
