--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -87,6 +87,21 @@ You can display different versions of your logo in light and dark modes.
    }),
    ```
 
+## Enable sitemap
+
+Starlight has built-in support for generating a sitemap. Enable sitemap generation by setting your URL as `site` in `astro.config.mjs`:
+
+```js
+// astro.config.mjs
+
+export default defineConfig({
+  site: 'https://stargazers.club',
+  integrations: [
+    starlight({ title: 'Site with sitemap' }),
+  ],
+});
+```
+
 ## Page layout
 
 By default, Starlight pages use a layout with a global navigation sidebar and a table of contents that shows the current page headings.
