fix: link translation
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/it/404.md
+++ b/docs/src/content/docs/it/404.md
@@ -8,6 +8,6 @@ hero:
   actions:
     - text: Torna alla home
       icon: right-arrow
-      link: /
+      link: /it/
       variant: primary
 ---
