fix: fix translation mistakes
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/it/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/it/guides/css-and-tailwind.mdx
@@ -222,7 +222,7 @@ module.exports = {
 				gray: colors.zinc,
 			},
 			fontFamily: {
-				sans: ['"Atkinson Iperleggibile"'],
+				sans: ['"Atkinson Hyperlegible"'],
 				// Il tuo carattere di testo preferito. Starlight utilizza uno stack di caratteri di sistema per impostazione predefinita.
 				sans: ['"Atkinson Hyperlegible"'],
 				// Il tuo carattere di codice preferito. Starlight utilizza i caratteri di sistema a spaziatura fissa per impostazione predefinita.
