fix: translation errors

--- a/docs/src/content/docs/it/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/it/guides/css-and-tailwind.mdx
@@ -267,8 +267,8 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 			pickColor: 'Scegli colore',
 		},
 		preview: {
-			darkMode: 'Modalità oscura',
-			lightMode: 'Modalità luce',
+			darkMode: 'Modalità scura',
+			lightMode: 'Modalità chiara',
 			bodyText:
 				'Il corpo del testo viene visualizzato in tonalità grigia con un contrasto elevato con lo sfondo.',
 			linkText: 'I collegamenti sono colorati.',
@@ -278,8 +278,8 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 	}}
 >
 	<Fragment slot="css-docs">
-		Aggiungi il seguente CSS al tuo progetto in un file [custom CSS
-		file](#stili-css-personalizzati) per applicare questo tema al tuo sito.
+		Aggiungi il seguente CSS al tuo progetto in un
+		[file custom CSS](#stili-css-personalizzati) per applicare questo tema al tuo sito.
 	</Fragment>
 	<Fragment slot="tailwind-docs">
 		L'esempio [file di configurazione di Tailwind](#styling-di-starlight-con-tailwind) di seguito
