--- a/docs/src/content/docs/it/manual-setup.mdx
+++ b/docs/src/content/docs/it/manual-setup.mdx
@@ -5,7 +5,7 @@ description: Scopri come configurare manualmente Starlight per aggiungerlo a un 
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-Il modo più rapido per creare un nuovo sito Starlight è utilizzare `create astro` come mostrato nella [guida introduttiva](/getting-started/#creating-a-new-project).
+Il modo più rapido per creare un nuovo sito Starlight è utilizzare `create astro` come mostrato nella [guida introduttiva](/it/getting-started/#creating-a-new-project).
 Se desideri aggiungere Starlight a un progetto Astro esistente, questa guida spiegherà come.
 
 ## Configura Starlight
@@ -14,7 +14,7 @@ Per seguire questa guida, avrai bisogno di un progetto Astro esistente.
 
 ### Aggiungi l'integrazione Starlight
 
-Starlight è un'[integrazione Astro](https://docs.astro.build/en/guides/integrations-guide/). Aggiungilo al tuo sito eseguendo il comando `astro add` nella directory principale del tuo progetto:
+Starlight è un'[integrazione Astro](https://docs.astro.build/it/guides/integrations-guide/). Aggiungilo al tuo sito eseguendo il comando `astro add` nella directory principale del tuo progetto:
 
 <Tabs>
     <TabItem label="npm">
@@ -58,7 +58,7 @@ export default defineConfig({
 });
 ```
 
-Trova tutte le opzioni disponibili nel [riferimento per la configurazione di Starlight](/reference/configuration/).
+Trova tutte le opzioni disponibili nel [riferimento per la configurazione di Starlight](/it/reference/configuration/).
 
 ### Configura raccolte di contenuti
 
@@ -94,7 +94,7 @@ Benvenuti nel mio progetto!
 ```
 
 Starlight utilizza il routing basato su file, il che significa che ogni file Markdown, MDX o Markdoc in `src/content/docs/` verrà trasformato in una pagina sul tuo sito. I metadati di Frontmatter (i campi `title` e `description` nell'esempio sopra) possono modificare il modo in cui viene visualizzata ciascuna pagina.
-Vedi tutte le opzioni disponibili nel [riferimento frontmatter](/reference/frontmatter/).
+Vedi tutte le opzioni disponibili nel [riferimento frontmatter](/it/reference/frontmatter/).
 
 ## Suggerimenti per i siti esistenti
 
