--- a/docs/src/content/docs/ja/guides/customization.mdx
+++ b/docs/src/content/docs/ja/guides/customization.mdx
@@ -84,6 +84,19 @@ starlight({
    }),
    ```
 
+## サイトマップを有効化する
+
+Starlightにはサイトマップ生成機能が組み込まれています。`astro.config.mjs`の`site`にURLを設定すると、サイトマップの生成が有効になります。
+
+```js
+// astro.config.mjs
+
+export default defineConfig({
+	site: 'https://stargazers.club',
+	integrations: [starlight({ title: 'サイトマップを設定したサイト' })],
+});
+```
+
 ## ページレイアウト
 
 Starlightのページはデフォルトで、グローバルなナビゲーションサイドバーと、現在のページの見出しを表示する目次を配置したレイアウトを使用します。
