fix: Chris' fixes
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/it/guides/customization.mdx
+++ b/docs/src/content/docs/it/guides/customization.mdx
@@ -75,7 +75,7 @@ Puoi visualizzare diverse versioni del tuo logo in modalità chiara e scura.
 
    </FileTree>
 
-2. Aggiungi il percorso alle varianti del tuo logo come opzioni "light" e "dark" invece di "src" in "astro.config.mjs":
+2. Aggiungi il percorso alle varianti del tuo logo come opzioni `light` e `dark` invece di `src` in `astro.config.mjs`:
 
    ```js
    starlight({
@@ -98,8 +98,8 @@ Funziona particolarmente bene per le pagine di destinazione e puoi vederlo in az
 ---
 # src/content/docs/index.md
 
-tititletolo: La mia pagina di destinazione
-template: spruzzo
+title: La mia pagina di destinazione
+template: splash
 ---
 ```
 
