--- a/docs/src/content/docs/ko/guides/customization.mdx
+++ b/docs/src/content/docs/ko/guides/customization.mdx
@@ -84,6 +84,19 @@ starlight({
    }),
    ```
 
+## 사이트맵 활성화
+
+Starlight에는 사이트맵 생성 기능이 내장되어 있습니다. `astro.config.mjs` 파일에 있는 `site` 속성의 값을 URL로 설정하여 사이트맵 생성을 활성화할 수 있습니다.
+
+```js
+// astro.config.mjs
+
+export default defineConfig({
+	site: 'https://stargazers.club',
+	integrations: [starlight({ title: '사이트맵을 사용하는 웹 사이트' })],
+});
+```
+
 ## 페이지 레이아웃
 
 기본적으로 Starlight 페이지는 전역 탐색 사이드바와 현재 페이지 제목의 목차가 포함된 레이아웃을 사용합니다.
