--- a/docs/src/content/docs/es/showcase.mdx
+++ b/docs/src/content/docs/es/showcase.mdx
@@ -87,6 +87,11 @@ Starlight ya está siendo utilizado en producción. Estos son algunos de los sit
 		href="https://starter.obytes.com"
 		thumbnail="starter.obytes.com.jpg"
 	/>
+	<Card
+		title="Kanri"
+		href="https://kanriapp.com"
+		thumbnail="kanriapp.com.png"
+	/>
 </FluidGrid>
 
 Consulta todos los [repositorios de proyectos públicos que utilizan Starlight en GitHub](https://github.com/withastro/starlight/network/dependents).
