fix: fixed broken imports

--- a/docs/src/content/docs/es/guides/sidebar.mdx
+++ b/docs/src/content/docs/es/guides/sidebar.mdx
@@ -5,8 +5,8 @@ sidebar:
   badge: Nuevo
 ---
 
-import FileTree from '../../../components/file-tree.astro';
-import SidebarPreview from '../../../components/sidebar-preview.astro';
+import FileTree from '../../../../components/file-tree.astro';
+import SidebarPreview from '../../../../components/sidebar-preview.astro';
 
 Una barra lateral bien organizada es clave para una buena documentación, ya que es una de las principales formas en que los usuarios navegarán por su sitio. Starlight proporciona un conjunto completo de opciones para personalizar el diseño y el contenido de tu barra lateral.
 
