--- a/docs/src/content/docs/es/guides/sidebar.mdx
+++ b/docs/src/content/docs/es/guides/sidebar.mdx
@@ -174,7 +174,7 @@ Y la siguiente estructura de archivos:
 
 </FileTree>
 
-The following sidebar will be generated:
+La siguiente barra lateral se generará automáticamente:
 
 <SidebarPreview
 	config={[
