feat: update `showcase.mdx`

--- a/docs/src/content/docs/it/showcase.mdx
+++ b/docs/src/content/docs/it/showcase.mdx
@@ -87,6 +87,11 @@ Starlight è già utilizzato nella produzione. Questi sono alcuni dei siti prese
 		href="https://starter.obytes.com"
 		thumbnail="starter.obytes.com.jpg"
 	/>
+	<Card
+		title="Kanri"
+		href="https://kanriapp.com"
+		thumbnail="kanriapp.com.png"
+	/>
 </FluidGrid>
 
 Visualizza tutti i [repository di progetti pubblici che utilizzano Starlight su GitHub](https://github.com/withastro/starlight/network/dependents).
